<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="org.csystem.android.app.veterinarian.viewmodel.VeterinarianDetailsActivityViewModel"/>
        <import type="org.csystem.android.app.veterinarian.viewmodel.converter.LongStringConverter"/>
        <variable name="viewModel" type="VeterinarianDetailsActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VeterinarianDetailsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_diploma_no_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{LongStringConverter.INSTANCE.toStr(viewModel.veterinarianInfo.diplomaNo)}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_citizen_id_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfo.citizenId}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_first_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfo.firstName}"/>

        <TextView
            android:id="@+id/text_view_middle_name_nullable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_middle_name_text" />

        <EditText
            android:id="@+id/edit_text_middle_name_nullable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfo.middleName}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_last_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfo.lastName}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_register_date_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfo.registerDate}"/>
    </LinearLayout>
</layout>
