<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="org.csystem.android.app.veterinarian.viewmodel.VeterinarianDetailsWithFullNameActivityViewModel"/>
        <import type="org.csystem.android.app.veterinarian.viewmodel.converter.LongStringConverter"/>
        <variable name="viewModel" type="VeterinarianDetailsWithFullNameActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VeterinarianDetailsWithFullNameActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_diploma_no_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{LongStringConverter.INSTANCE.toStr(viewModel.veterinarianInfoWithFullName.diplomaNo)}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_citizen_id_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfoWithFullName.citizenId}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_full_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfoWithFullName.fullName}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_register_date_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@{viewModel.veterinarianInfoWithFullName.registerDate}"/>
    </LinearLayout>
</layout>
